--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
 #root {
-  max-width: 1280px;
+  max-width: -webkit-fill-available;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
